tests/ui/has-arguments.stderr
error: this attribute takes no arguments

         = help: use `#[contracts]`

 --> $DIR/has-arguments.rs:3:1
  |
3 | #[contracts(a, b)]
  | ^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `contracts` (in Nightly builds, run with -Z macro-backtrace for more info)
