tests/ui/has-arguments.rs
use contracts::contracts;

#[contracts(a, b)]
fn f() {}

fn main() {}
